
4.1.2 - ie refresh in progress

* cleanup progress
  directory structure cleanup
  global_variables.pm is gone (hurrah).
  all shared globals are stored in config.pm - enables cli and gui to share nicely

* bookmarks file renamed
  fixed several issues
  code cleanup
  creating new bookmark correctly redraws the menu

* ls_dir
  now dies if you try to list twice - will turn off once Im sure there are no more double calls
  found and fixed a ls_dir double call.

* clear button works again and also clears log window




* guess tags now correctly guesses tags AFTER all tag modifications

* more cleanups. all die's replaced with &main::quit

* fixed columns issue in dir_hlist
  only show needed amont of columns (correctly this time).

* fixname::fix - added quit errors to catch undef filenames and '' as filenames

* alot of #'ed print debug messages

* ls_dir now only shows neccesary headers + massive cleanup

* fixname::fix - most subs can be sent a flag to enable STRING mode (dont do file detection)
  large overhaul - likely breaks namefix-cli.pl atm
  if fixname is passed an undefined file - quit out
  if fixname is file eq '' and mode eq FILE - quit out

* main::quit
  todo: add to namefix-cli as it quits differently depending on mode.
  clucks backtrace and prints quit message - so useful for debugging

* mp3.pm
  quit out if a tag is undefined





* get_tags should no longer return undef tags

* massive overhaul of nf_print::p
  only shows files & dirs
  code is much much cleaner
  likely broke several things buuut listing and previews work correctly again

* print command tidyup. nf_print::p is being overhauled for files and directories only
* all other printing will be done to the new console on gui. cli does not change

* drastic overhaul of mp3 library.
  updated to use new methods of writing tags, as my old method is now depreciated
  new methods enabled writing to ogg files and other audio formats.